names now require | name | to work

--- a/generators/cardGen-angular/src/app/card-main/card-main.component.html
+++ b/generators/cardGen-angular/src/app/card-main/card-main.component.html
@@ -1,2 +1,4 @@
-<p>card-main works!</p>
-<ng-content></ng-content>
+<div class="type">{{this.type}}</div>
+<div class="cost">{{this.cost}}</div>
+<div class="name">{{this.name}}</div>
+<div class="rules">{{this.rules}}</div>
