--- a/generators/cardGen-angular/src/app/equipment/equipment.component.html
+++ b/generators/cardGen-angular/src/app/equipment/equipment.component.html
@@ -1,4 +1,4 @@
-<app-card-main>
+<app-card-main type="">
 </app-card-main>
 <div *ngFor="let equipment of loadedEquipment$ | async">
     {{equipment.rawText}}
