--- a/generators/cardGen-angular/src/app/equipment/equipment.component.html
+++ b/generators/cardGen-angular/src/app/equipment/equipment.component.html
@@ -1,6 +1,8 @@
 <app-card-main type="">
 </app-card-main>
 <div *ngFor="let equipment of loadedEquipment$ | async">
-    {{equipment.rawText}}
-    {{equipment.rawCost}}
+    {{equipment.cost}}
+    {{equipment.type}}
+    {{equipment.name}}
+    {{equipment.rules}}
 </div>
