--- a/generators/cardGen-angular/src/app/card-main/card-main.component.html
+++ b/generators/cardGen-angular/src/app/card-main/card-main.component.html
@@ -1,4 +1,10 @@
-<div class="type">{{this.type}}</div>
-<div class="cost">{{this.cost}}</div>
-<div class="name">{{this.name}}</div>
-<div class="rules">{{this.rules}}</div>
+<div [ngStyle]="this.cardStyle">
+    <div>
+        <div class="type">{{this.type}}</div>
+        <div>
+            <div class="cost">{{this.cost}}</div>
+            <div class="name">{{this.name}}</div>
+        </div>
+        <div class="rules">{{this.rules}}</div>
+    </div>
+</div>
