--- a/generators/cardGen-angular/src/app/equipment/equipment.component.html
+++ b/generators/cardGen-angular/src/app/equipment/equipment.component.html
@@ -1,10 +1,15 @@
-
-<div [ngStyle]="this.sheetStyle">
-    <app-card-main *ngFor="let equipment of loadedEquipment$ | async"
-        [cost]="equipment.cost"
-        [type]="equipment.type"
-        [name]="equipment.name"
-        [rules]="equipment.rules"    
-    >
-    </app-card-main>
+Make sure zoom is set to 100%, as it affects the image size
+<br>
+<button type="button" (click)="appendImage()">Convert to Image</button>
+<button type="button" (click)="generateImage()">Download as Png</button>
+<div>
+    <div [ngStyle]="this.sheetStyle" id="image-section">
+        <app-card-main *ngFor="let equipment of loadedEquipment$ | async"
+            [costs]="equipment.cost"
+            [type]="equipment.type"
+            [name]="equipment.name"
+            [rules]="equipment.rules"    
+        >
+        </app-card-main>
+    </div>
 </div>
