added support for more icons, renamed shit, moved equipmentCsv to angular

--- a/generators/cardGen-angular/src/app/card-main/card-main.component.html
+++ b/generators/cardGen-angular/src/app/card-main/card-main.component.html
@@ -6,7 +6,7 @@
             <div>
                 <span class="name">{{this.name}}&nbsp;</span>
                 <div class="cost" *ngFor="let cost of this.costs">
-                    <app-icon [resource]="cost"></app-icon>
+                    <app-icon [icon]="cost"></app-icon>
                 </div>
             </div>
             <div class="card-image"></div>
