--- a/generators/cardGen-angular/src/app/icon/icon.component.html
+++ b/generators/cardGen-angular/src/app/icon/icon.component.html
@@ -1,2 +1,2 @@
-<span *ngIf="this.displayValue">{{this.resource?.value}}x</span>
-<span [ngStyle]="{'color': this.color, 'font-size': this.fontSize + 'px'}" class="icon-font">{{this.icon}}</span>
+<span *ngIf="this.displayValue">{{this.icon?.value}}x</span>
+<span [ngStyle]="{'color': this.color, 'font-size': this.fontSize + 'px'}" class="icon-font">{{this.iconChar}}</span>
