--- a/generators/cardGen-angular/src/styles.scss
+++ b/generators/cardGen-angular/src/styles.scss
@@ -10,7 +10,8 @@
 }
 
 body { 
-    font-family: 'Liberation';
+    // font-family: 'Liberation';
+    font-family: 'Teko', sans-serif;
     font-size: 48px;
     background: #c5c5c5;
 }
