added some formating for type, and formated csv a bit more

--- a/generators/cardGen-angular/src/app/card-main/card-main.component.scss
+++ b/generators/cardGen-angular/src/app/card-main/card-main.component.scss
@@ -1,6 +1,11 @@
 .type {
     text-align: center;
     font-size: 48px;
+    border-bottom: 1px solid black;
+}
+
+.inner-type {
+    padding: 0;;
 }
 
 .cost {
