added files for tile gen

--- a/generators/cardGen-angular/src/app/app.component.html
+++ b/generators/cardGen-angular/src/app/app.component.html
@@ -1,7 +1,29 @@
 <nav>
   <ul>
-    <li><a routerLink="/equipment" routerLinkActive="active" ariaCurrentWhenActive="page">Equipment</a></li>
-    <li><a routerLink="/usables" routerLinkActive="active" ariaCurrentWhenActive="page">Usables</a></li>
+    <li>
+      <a
+        routerLink="/equipment"
+        routerLinkActive="active"
+        ariaCurrentWhenActive="page"
+        >Equipment</a
+      >
+    </li>
+    <li>
+      <a
+        routerLink="/usables"
+        routerLinkActive="active"
+        ariaCurrentWhenActive="page"
+        >Usables</a
+      >
+    </li>
+    <li>
+      <a
+        routerLink="/tiles"
+        routerLinkActive="active"
+        ariaCurrentWhenActive="page"
+        >Tiles</a
+      >
+    </li>
   </ul>
 </nav>
 <!-- The routed views render in the <router-outlet>-->
