--- a/generators/cardGen-angular/src/app/tiles/tile-page/tile-page.component.scss
+++ b/generators/cardGen-angular/src/app/tiles/tile-page/tile-page.component.scss
@@ -1,8 +1,4 @@
-// Define hexagon-related variables
-$hexagonTotalWidth: 405px;
-$hexagonSideLength: $hexagonTotalWidth / 2;
-$hexagonHeight: 350.74px; // Calculated value: $hexagonSideLength * sqrt(3)
-$hexagonVerticalGap: $hexagonHeight / 4;
+@import "./hex-vars.scss";
 
 $v-title-gap: 40px;
 $v-tile-spacing: $hexagonHeight * 4;
