--- a/generators/cardGen-angular/src/app/tiles/tile-page/tile/tile.component.html
+++ b/generators/cardGen-angular/src/app/tiles/tile-page/tile/tile.component.html
@@ -1,12 +1,12 @@
 <div>
-	<app-hex class="hex1" [hex]="this.tile.hexes[0]"></app-hex>
+	<app-hex class="hex1 hexes" [hex]="this.tile.hexes[0]"></app-hex>
 </div>
 <div>
-	<app-hex class="hex2" [hex]="this.tile.hexes[1]"></app-hex>
+	<app-hex class="hex2 hexes" [hex]="this.tile.hexes[1]"></app-hex>
 </div>
 <div>
-	<app-hex class="hex3" [hex]="this.tile.hexes[2]"></app-hex>
+	<app-hex class="hex3 hexes" [hex]="this.tile.hexes[2]"></app-hex>
 </div>
 <div>
-	<app-hex class="hex4" [hex]="this.tile.hexes[3]"></app-hex>
+	<app-hex class="hex4 hexes" [hex]="this.tile.hexes[3]"></app-hex>
 </div>
