--- a/generators/cardGen-angular/src/app/tiles/tile-page/tile/tile.component.scss
+++ b/generators/cardGen-angular/src/app/tiles/tile-page/tile/tile.component.scss
@@ -1,7 +1,7 @@
 @import "../hex-vars.scss";
 
 .hex1 {
-	width: fit-content;
+	position: relative;
 }
 .hex2 {
 	position: relative;
@@ -18,6 +18,7 @@
 	right: $hexagonTotalWidth / 2 + $hexagonSideLength / 2 - $hexagonBorder;
 }
 
+//This clip path is not perfect. Trying to figure out what it should be has been hard. For now, I'm leaving it.
 .hexes {
 	display: grid;
 	margin: auto;
