actions have their own page, formating,

--- a/generators/cardGen-angular/src/app/app.component.html
+++ b/generators/cardGen-angular/src/app/app.component.html
@@ -1,30 +1,38 @@
 <nav>
-  <ul>
-    <li>
-      <a
-        routerLink="/equipment"
-        routerLinkActive="active"
-        ariaCurrentWhenActive="page"
-        >Equipment</a
-      >
-    </li>
-    <li>
-      <a
-        routerLink="/usables"
-        routerLinkActive="active"
-        ariaCurrentWhenActive="page"
-        >Usables</a
-      >
-    </li>
-    <li>
-      <a
-        routerLink="/tiles"
-        routerLinkActive="active"
-        ariaCurrentWhenActive="page"
-        >Tiles</a
-      >
-    </li>
-  </ul>
+	<ul>
+		<li>
+			<a
+				routerLink="/equipment"
+				routerLinkActive="active"
+				ariaCurrentWhenActive="page"
+				>Equipment</a
+			>
+		</li>
+		<li>
+			<a
+				routerLink="/usables"
+				routerLinkActive="active"
+				ariaCurrentWhenActive="page"
+				>Usables</a
+			>
+		</li>
+		<li>
+			<a
+				routerLink="/actions"
+				routerLinkActive="active"
+				ariaCurrentWhenActive="page"
+				>Actions</a
+			>
+		</li>
+		<li>
+			<a
+				routerLink="/tiles"
+				routerLinkActive="active"
+				ariaCurrentWhenActive="page"
+				>Tiles</a
+			>
+		</li>
+	</ul>
 </nav>
-<!-- The routed views render in the <router-outlet>-->
+
 <router-outlet></router-outlet>
