--- a/generators/cardGen-angular/src/app/usables/usables.component.html
+++ b/generators/cardGen-angular/src/app/usables/usables.component.html
@@ -2,7 +2,7 @@ Make sure zoom is set to 100%, as it affects the image size
 <br />
 <button type="button" (click)="appendImage()">Convert to Image</button>
 <button type="button" (click)="generateImage()">Download as Png</button>
-<div>
+<div style="display: flex; flex-wrap: wrap">
 	<div
 		*ngFor="let usableSheet of loadedUsables$ | async"
 		[ngStyle]="this.sheetStyle"
